dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure  # Sử dụng HTTP và HTTPS
    traefik.ingress.kubernetes.io/router.tls: "true"  # Bật TLS cho websecure
spec:
  rules:
  - host: k8s.dinhkhoile.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard  # Service của Dashboard
            port:
              number: 443               # Forward đến cổng 443 của Service
  tls:
  - secretName: kubernetes-dashboard-cert  # Secret chứa TLS cert cho HTTPS
    hosts:
      - k8s.dinhkhoile.com
